version/stable/_sources/api/ansys/mechanical/stubs/v241/Ansys/Mechanical/DataModel/SolverData/MAPDLImportedSurfaceLoadData.rst.txt
.. vale off



:class:`MAPDLImportedSurfaceLoadData`
=====================================

.. py:class:: ansys.mechanical.stubs.v241.Ansys.Mechanical.DataModel.SolverData.MAPDLImportedSurfaceLoadData

   Bases: :py:obj:`object`


   
   MAPDLImportedSurfaceLoadData class.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: MAPDLImportedSurfaceLoadData

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~GetSurfaceEffectElementTypeId`
            - Gets the SurfaceEffectElementTypeId for the requested load type present in the row


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~LoadTypes`
            - Gets the load types present in the row.







Property detail
---------------
.. py:property:: LoadTypes
   :type: Optional[Iterable[Ansys.Mechanical.DataModel.Enums.ExternalModel.ImportedSurfaceLoadType]]

   
   Gets the load types present in the row.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: GetSurfaceEffectElementTypeId(eType: Ansys.Mechanical.DataModel.Enums.ExternalModel.ImportedSurfaceLoadType) -> int

   
   Gets the SurfaceEffectElementTypeId for the requested load type present in the row

   ..
       !! processed by numpydoc !!



.. vale on