version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/Mechanical/DataModel/SolverData/MAPDLImportedSurfaceLoadData.rst.txt
.. vale off



:class:`MAPDLImportedSurfaceLoadData`
=====================================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.Mechanical.DataModel.SolverData.MAPDLImportedSurfaceLoadData(id: int, solObj: Ansys.Common.Interop.DSObjectsAuto.IDSSolutionSummaryAuto, importedObj: Ansys.Common.Interop.DSObjectsAuto.IDSWorksheetRowDataAuto, rowId: int)

   Bases: :py:obj:`object`



.. py:currentmodule:: MAPDLImportedSurfaceLoadData

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetSurfaceEffectElementTypeId`
            - Gets the SurfaceEffectElementTypeId for the requested load type present in the row
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~ToString`
            - ToString method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~LoadTypes`
            - Gets the load types present in the row.







Property detail
---------------
.. py:property:: LoadTypes
   :type: Optional[Iterable[Ansys.Mechanical.DataModel.Enums.ExternalModel.ImportedSurfaceLoadType]]


   
   Gets the load types present in the row.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetSurfaceEffectElementTypeId(eType: Ansys.Mechanical.DataModel.Enums.ExternalModel.ImportedSurfaceLoadType) -> int

   
   Gets the SurfaceEffectElementTypeId for the requested load type present in the row

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on